# Graph-Machine-Learning

./: README.md  utils.py
.github/workflows/: ci.yaml
01_started_with_graphs/: 01_Introduction_Networkx.ipynb  02_Graph_metrics.ipynb
03_unsupervised_graph_machine_learning/: 03_Structural_deep_neural_embeddings.ipynb  04_Graph_Neural_Network.ipynb
04_supervised_graph_machine_learning/: 03_Graph_regularization_graph_neural_training.ipynb  04_Graph_Neural_Networks.ipynb
05_machine_learning_problems/: 01_link_prediction.ipynb  02_community_detection_algorithms.ipynb
06_social_network_analysis/: 01_Social_network_analysis.ipynb
07_text_analytics_nlp/: 03_supervised_classsification _graphSAGE-TFIDF.ipynb
Chapter01/: 01_Introduction_Networkx.ipynb  02_Graph_metrics.ipynb  03_Graphs_Benchmarks.ipynb  pyproject.toml  requirements.txt  utils.py
Chapter02/: 01_embedding_examples.ipynb  pyproject.toml  requirements.txt
Chapter03/: 01_ImageClassification_TensorFlow.ipynb  01_Shallow_Embeddings.ipynb  02_Autoencoders.ipynb  02_ImageClassification_Pytorch.ipynb  03_Autoencoders.ipynb  03_Structural_deep_neural_embeddings.ipynb  04_GraphAutoEncoder_PyGeometric.ipynb  04_Graph_Neural_Network.ipynb  05_GraphAutoEncoder_StellarGraph.ipynb  pyproject.toml  requirements.txt
Chapter04/: 01_Feature_based_methods.ipynb  01_Shallow_Embeddings.ipynb  02_Autoencoders.ipynb  02_Shallow_embeddings.ipynb  03_Graph_regularization_graph_neural_training.ipynb  03_Structural_deep_neural_embeddings.ipynb  04_Graph_Neural_Network.ipynb  04_Graph_Neural_Networks.ipynb  pyproject.toml  requirements.txt
Chapter05/: 01_Feature_based_methods.ipynb  01_link_prediction.ipynb  02_Shallow_embeddings.ipynb  02_community_detection_algorithms.ipynb  03_Graph_regularization_graph_neural_training.ipynb  04_Graph_Neural_Networks.ipynb  05_Planetoid.ipynb  pyproject.toml  requirements.txt
Chapter06/: 01_Social_network_analysis.ipynb  01_link_prediction.ipynb  02_Social_network_analysis.ipynb  02_community_detection_algorithms.ipynb  03_graph_similarity.ipynb  pyproject.toml  requirements.txt
Chapter07/: 01_Social_network_analysis.ipynb  01_nlp_graph_creation.ipynb  02_Social_network_analysis.ipynb  02_supervised_classification-embeddings.ipynb  pyproject.toml  requirements.txt  subject_object_extraction.py
Chapter08/: 01_Credit_card_edges_classification.ipynb  01_nlp_graph_creation.ipynb  02_supervised_classification-embeddings.ipynb  03_supervised_classification_graphSAGE-TFIDF.ipynb  03_supervised_classsification_graphSAGE-TFIDF.ipynb  04_supervised_classification_pyg.ipynb  pyproject.toml  requirements.txt  subject_object_extraction.py
Chapter09/: 01_Credit_card_edges_classification.ipynb  pyproject.toml  requirements.txt
Chapter09/dataset/: movieCreationQuery.txt
Chapter10/: 00_Data_Conversion.ipynb  01_Neo4j_bindings.ipynb  02_JanusGraph_Gremlin.ipynb  movieCreationQuery.txt  pyproject.toml  requirements.txt
Chapter11/: Temporal_GraphML.ipynb
Chapter12/: LLM_and_Graphs.ipynb  pyproject.toml  requirements.txt  setup_ollama.sh
Chapter13/: LMM_and_Graphs.ipynb  pyproject.toml  requirements.txt  setup_ollama.sh
ChapterNN/: 01_ImageClassification_TensorFlow.ipynb  02_ImageClassification_Pytorch.ipynb  03_Autoencoders.ipynb  04_GraphAutoEncoder_PyGeometric.ipynb  05_GraphAutoEncoder_StellarGraph.ipynb  pyproject.toml
docker/: Dockerfile  README.md  tests.sh
