[tool.poetry]
name = "Graph Machine Learning - Chapter 4"
version = "1.0.0"
description = ""
authors = ["Enrico Deusebio <edeusebio85@gmail.com>"]
packages = []

[tool.setuptools]
py-modules = []

[tool.poetry.dependencies]
python = "~3.8"
ipykernel = ">=6.0.0" 
matplotlib = "==3.2.2"
numpy = "==1.21.6"
neural-structured-learning = "==1.3.1"
networkx = "==2.5"
tensorflow = "^2.6.0" 
tensorflow-io-gcs-filesystem = "==0.21.0" # This needs pinning - see https://stackoverflow.com/a/76477590 
stellargraph= "^1.2.1"
protobuf= "^3.20"
torch = "^2.1.0"
chardet = "==5.2.0"
torch_geometric = "^2.5.2"
torchvision = "^0.16.0"
torchmetrics="^1.3.0"
# dgl = https://data.dgl.ai/wheels/torch-2.1/dgl-2.4.0-cp38-cp38-manylinux1_x86_64.whl 
dgl = {url = "https://data.dgl.ai/wheels/torch-2.1/dgl-2.4.0-cp38-cp38-manylinux1_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

