[tool.poetry]
name = "Graph Machine Learning - Chapter 6"
version = "1.0.0"
description = ""
authors = ["Enrico Deusebio <edeusebio85@gmail.com>"]
packages = []

[tool.setuptools]
py-modules = []

# [[tool.poetry.source]]
# name = "torch-wheels"
# url = "https://data.pyg.org/whl/torch-2.1.0+cpu.html"
# priority = "supplemental"

[tool.poetry.dependencies]
python = "~3.8"
ipykernel = ">=6.0.0" 
matplotlib = "==3.2.2"
networkx = "==2.5" 
scikit-learn = "==0.24.0" 
gensim = "==3.8.3"
node2vec = "==0.3.3"
chardet = "==5.2.0"
tensorflow = "^2.6.0" 
tensorflow-io-gcs-filesystem = "==0.21.0" # This needs pinning - see https://stackoverflow.com/a/76477590 
protobuf= "^3.20"
torch = "^2.1.0"
torch_geometric = "^2.5.2"
torchvision = "^0.16.0"
torchmetrics="^1.3.0"
# torch-sparse = {version = "^0.6.18", source = "torch-wheels"}
torch-sparse = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_sparse-0.6.18%2Bpt21cpu-cp38-cp38-linux_x86_64.whl"}
pyg-lib = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/pyg_lib-0.4.0%2Bpt21cpu-cp38-cp38-linux_x86_64.whl"}
python-louvain = "==0.16"
# communities = "==2.2.0"
nxt-gem = { git="https://github.com/palash1992/GEM.git", branch="master" }
# This is what is holding us back to python 3.8
stellargraph = "^1.2.1"
dgl = {url = "https://data.dgl.ai/wheels/torch-2.1/dgl-2.4.0-cp38-cp38-manylinux1_x86_64.whl"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
