[tool.poetry]
name = "Graph Machine Learning (2nd Edition) - Chapter 6"
version = "1.0.0"
description = ""
authors = ["Enrico Deusebio <edeusebio85@gmail.com>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "~3.8"
ipykernel = ">=6.0.0" 
networkx = "==2.5" 
matplotlib = "==3.2.2"
node2vec = "==0.3.3"
karateclub = "==1.0.19"
gensim = "==3.8.3"
communities = "==2.2.0"
scikit-learn = "==0.24.0" 
chardet = "==5.2.0"
# Tensorflow
tensorflow = "^2.6.0" 
tensorflow-io-gcs-filesystem = "==0.21.0" # This needs pinning - see https://stackoverflow.com/a/76477590 
protobuf= "^3.20"
# Torch
torch = "^2.1.0"
torch_geometric = "^2.5.2"
torchvision = "^0.16.0"
torchmetrics="^1.3.0"
torch-sparse = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_sparse-0.6.18%2Bpt21cpu-cp38-cp38-linux_x86_64.whl"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_scatter-2.1.2%2Bpt21cpu-cp38-cp38-linux_x86_64.whl"}
# Graph ML Libraries
nxt-gem = { git="https://github.com/palash1992/GEM.git", branch="master" }
stellargraph = { git="https://github.com/stellargraph/stellargraph.git", branch="develop" }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"