[tool.poetry]
name = "Graph Machine Learning - Chapter 9"
version = "1.0.0"
description = ""
authors = ["Enrico Deusebio <edeusebio85@gmail.com>"]
packages = []
package-mode = false

[tool.setuptools]
py-modules = []

[tool.poetry.dependencies]
python = "~3.8"
ipykernel = ">=6.0.0" 
matplotlib = "==3.2.2"
networkx = "==2.5" 
scikit-learn = "==0.24.0" 
pandas= "==1.1.3"
gensim = "==3.8.3"
node2vec = "==0.3.3"
python-louvain = "==0.16"
kaggle = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
