[tool.poetry]
name = "Graph Machine Learning (2nd Edition) - Chapter 13"
version = "1.0.0"
description = ""
authors = ["Enrico Deusebio <edeusebio85@gmail.com>"]
packages = []
package-mode = false

[tool.setuptools]
py-modules = []

[tool.poetry.dependencies]
python = "~3.10"
ipykernel = ">=6.0.0" 
matplotlib = "==3.2.2"
numpy = ">=1.26,<2.0"
# networkx = "==2.5"
torch = "^2.1.0"
torch_geometric = "^2.5.2"
torchvision = "^0.16.0"
torchmetrics="^1.3.0"
torch-sparse = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_sparse-0.6.18%2Bpt21cpu-cp310-cp310-linux_x86_64.whl"}
torch-scatter = {url = "https://data.pyg.org/whl/torch-2.1.0%2Bcpu/torch_scatter-2.1.2%2Bpt21cpu-cp310-cp310-linux_x86_64.whl"}
neo4j-graphrag = {extras = ["ollama"], version="^1.6.1"}
langchain-community = "^0.3.21"
langchain-experimental = "^0.3.4"
langchain-neo4j = "^0.4.0"
langchain-openai = "^0.3.12"
transformers = {extras = ["torch"], version = "^4.50.3"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

